# basic-rpg-logic

./: CMakeLists.txt  ability.hpp  abilty.hpp  class.hpp  classlist.hpp  cleric.hpp  effect.hpp  equipment.hpp  item.hpp  item_manager.hpp  levelsystem.hpp  macros.hpp  main  main.cpp  playercharacter.hpp  pointpool.hpp  statblock.hpp  types.hpp
.cache/clangd/index/: ability.cpp.E2A26D8825F8799D.idx  ability.h.585742CE39B32D3E.idx  class.cpp.F63BD1DE53C38875.idx  class.h.584671E05675B915.idx  cleric.cpp.7589795200C1972F.idx  cleric.h.640A04B81A0EE693.idx  demorpg.cpp.3295046334E57127.idx  effect.cpp.6F8E3B7E7DE6AAEE.idx  effect.h.150558D69C8BA481.idx  item.cpp.EB34B29EC82A5FAC.idx  item.h.5E49D84862B3EB55.idx  item_manager.cpp.F65897DA30BCEBEF.idx  item_manager.h.8B601582E870F698.idx  levelsystem.cpp.22F9AE436DAF529D.idx  levelsystem.h.A491B41DE213EFB3.idx  macros.hpp.A71488FE3313613A.idx  main.cpp.8BF5FCEC2383DF8B.idx  main.h.39CEA3B86D9D2BEB.idx  monster.cpp.13AD9FB0B6AA8AC4.idx  monster.h.AA4ECCBC6E53D787.idx  playercharacter.cpp.E55B84B89658EAA2.idx  playercharacter.h.5A6558B12B202DE4.idx  pointpool.cpp.C4B98251D9C08E78.idx  pointpool.h.F9CE45571779E2FF.idx  random.cpp.D56C8BA632800B1D.idx  random.h.65A5E0FB6F058EB1.idx  statblock.cpp.841ED68C39285BA7.idx  statblock.h.3B7ED8745B219BD5.idx  test.cpp.80C6D28F89AAB80F.idx
DemoRPG/: CMakeLists.txt
DemoRPG/include/: ability.h  item_manager.h  item_manager.hpp  levelsystem.hpp  playercharacter.h  playercharacter.hpp
DemoRPG/src/: CMakeLists.txt  ability.cpp  cleric.cpp  demorpg.cpp  item.cpp  item_manager.cpp  statblock.cpp
DemoRPG/test/: CMakeLists.txt  test.cpp
demorpg_game/: CMakeLists.txt  main.cpp  main.h
demorpg_lib/: CMakeLists.txt
demorpg_lib/include/: ability.h  class.h  cleric.h  effect.h  item.h  item_manager.h  monster.h  playercharacter.h  pointpool.h  statblock.h
demorpg_lib/src/: CMakeLists.txt  ability.cpp  class.cpp  cleric.cpp  effect.cpp  item.cpp  item_manager.cpp  levelsystem.cpp  playercharacter.cpp  pointpool.cpp  random.cpp
demorpg_test/: CMakeLists.txt  test.cpp
game/: CMakeLists.txt  main.cpp
include/: ability.hpp  cleric.h  cleric.hpp  effect.hpp  item.h  item.hpp  levelsystem.h  macros.hpp  playercharacter.h  random.h
src/: CMakeLists.txt  cleric.cpp  item.cpp  item_manager.cpp  main.cpp  monster.cpp  playercharacter.cpp  statblock.cpp
test/: CMakeLists.txt  test.cpp
